# plinkseq-sxsw

./: .gitignore  CMakeLists.txt  Makefile.am  README  common.am  configure  configure.ac
R/: README.md  make-shlib.sh  pseq.R  rint.cpp  rint.h
R/Rplinkseq/: .gitignore  DESCRIPTION  configure.ac
R/Rplinkseq/R/: ldpath.R  pseq.R
R/Rplinkseq/inst/include/: plinkseq.h
R/Rplinkseq/inst/include/plinkseq/: allele.h  annot.h  bcf.h  bed.h  bgzf.h  crandom.h  defs.h  dose.h  em.h  eval.h  filemap.h  fisher.h  genotype.h  glm.h  gstore.h  helper.h  inddb.h  individual.h  indmap.h  ipmpar.h  iterrep.h  locdb.h  mask.h  matrix.h  meta.h  netdb.h  permute.h  phmap.h  pp.h  pp.pb.h  prob.h  refdb.h  regions.h  segments.h  seqdb.h  sqlite3.h  sqlwrap.h  sqlz.h  statistics.h  svar.h  (+9 more)
R/Rplinkseq/inst/lib/x86_64/: libRplinkseq.dylib
R/Rplinkseq/src/: Makevars  Makevars.in  allele.cpp  allele.h  annot.cpp  annot.h  bcf.cpp  bcf.h  bed.cpp  bed.h  bgzf.cpp  bgzf.h  cdflib.h  crandom.cpp  crandom.h  dcdflib.cpp  dcdflib.h  defs.cpp  defs.h  em.cpp  em.h  eval.cpp  eval.h  filemap.cpp  filemap.h  fisher.cpp  fisher.h  genotype.cpp  genotype.h  glm.cpp  glm.h  globals.cpp  gstore.cpp  gstore.h  helper.cpp  helper.h  hmm.h  inddb.cpp  inddb.h  individual.cpp  (+71 more)
browser/: Makefile  Makefile-custom  Makefile-static  Makefile.am  cgi.h  configure.ac  lines.cpp  lines.h  pbrowse.in  psb.cpp  psb.h
client/: CMakeLists.txt  Makefile  Makefile-custom  Makefile-static  Makefile.am  args.h  assoc.cpp  assoc.h  chet.cpp  clusters.cpp  clusters.h  cnv.cpp  cnv.h  compare.cpp  compare.h  configure  configure.ac  davies.cpp  davies.h  extra.cpp  extra.h  func.cpp  func.h  genic.cpp  genic.h  glm-tests.cpp  gseq.cpp  ibd.cpp  ibd.h  ibs.cpp  ibs.h  kbac.cpp  loaders.cpp  loaders.h  main.cpp  netassoc.cpp  netassoc.h  pops.cpp  pops.h  prot.cpp  (+11 more)
dependencies/: CMakeLists.txt
gseq/: Makefile-custom  helper.cpp  helper.h  main.h  pseqgui.cpp
index/: Makefile.am  autohtml.h  index.cpp  index.h  index.in
lib/: CMakeLists.txt  Makefile  Makefile-custom  Makefile-static  Makefile.am  allele.cpp  allele.h  annot.cpp  annot.h  bcf.cpp  bcf.h  bcf_reader.cpp  bcf_reader.h  bed.cpp  bed.h  bgzf.cpp  configure  configure.ac  crandom.cpp  crandom.h  dcdflib.cpp  defs.cpp  defs.h  dose.cpp  dose.h  em.cpp  em.h  eval.cpp  eval.h  filemap.cpp  filemap.h  fisher.cpp  fisher.h  genotype.cpp  genotype.h  glm.cpp  glm.h  globals.cpp  gstore.cpp  gstore.h  (+71 more)
lib/plinkseq/: allele.h  annot.h  bcf.h  bgzf.h  defs.h  dose.h  em.h  eval.h  filemap.h  fisher.h  genotype.h  gstore.h  helper.h  inddb.h  individual.h  indmap.h  iterrep.h  locdb.h  mask.h  matrix.h  meta.h  netdb.h  output.h  permute.h  phmap.h  pp.h  pp.pb.h  prob.h  protdb.h  refdb.h  regions.h  segments.h  seqdb.h  sqlwrap.h  sqlz.h  statistics.h  svar.h  token.h  vardb.h  variant.h  (+3 more)
pdas/: Makefile.am  das.cpp  das.h  socks.cpp  socks.h
py/: README.md
py/pyplinkseq/: pyplinkseq.pyx  setup.py
py/pyplinkseqint/: Makefile  pyplinkseqint.cpp  pyplinkseqint.h
scripts/: pseqLogToCommand  pseqLookupToTable.pl
test/: simple.sh
util/: Makefile.am  behead.cpp  char_tok.cpp  char_tok.h  gcol.cpp  smp.cpp  tab2vcf.cpp
