# TODO: set up .rpm package build (page 202)
# TODO: should we use AM_MAINTAINER_MODE? (page 141)
# TODO: should we add any additional top level targets? 

ACLOCAL_AMFLAGS = -I m4

# this is necessary even though we've specified AC_CONFIG_SUBDIRS in configure.ac
SUBDIRS = lib client util

doc_DATA = AUTHORS ChangeLog COPYING INSTALL NEWS README
