cmake_minimum_required(VERSION 2.8)

include_directories(${PLINKSEQ_SOURCE_DIR}/dependencies/include)
link_directories(${PLINKSEQ_SOURCE_DIR}/dependencies/lib)

add_library (plinkseq SHARED 
gstore.h 
variant.h 
genotype.h 
meta.h 
regions.h 
filemap.h	
defs.h options.h 
helper.h 
zfstream.h 
vcf.h 
bcf.h 
sqlwrap.h	
locdb.h 
vardb.h 
segments.h 
varfunc.h 
variant.pb.h 
refdb.h 
seqdb.h	
annot.h 
inddb.h 
individual.h 
indmap.h 
phmap.h 
mask.h 
vgroup.h 
allele.h	
permute.h
crandom.h 
iterrep.h 
em.h 
bed.h 
pp.h 
pp.pb.h 
eval.h 
token.h
statistics.h 
matrix.h 
cdflib.h 
dcdflib.h 
ipmpar.h 
bcf.h 
knetfile.h
khash.h 
bgzf.h 
fisher.h 
glm.h 
netdb.h
gstore.cpp 
globals.cpp 
variant.cpp 
genotype.cpp 
meta.cpp
regions.cpp 
filemap.cpp 
vcf.cpp 
bcf.cpp 
zfstream.cpp	
sqlwrap.cpp 
helper.cpp 
options.cpp 
locdb.cpp 
vardb.cpp 
segments.cpp	
varfunc.cpp 
variant.pb.cpp 
refdb.cpp 
seqdb.cpp 
annot.cpp 
inddb.cpp	
mask.cpp 
reffuncs.cpp 
vgroup.cpp 
allele.cpp 
individual.cpp 
indmap.cpp	
phmap.cpp 
permute.cpp 
crandom.cpp 
defs.cpp 
em.cpp 
bed.cpp 
varmeta.cpp
pp.cpp 
pp.pb.cpp 
eval.cpp 
token.cpp 
statistics.cpp 
dcdflib.cpp
bgzf.cpp 
knetfile.cpp 
bcf.cpp 
fisher.cpp 
glm.cpp 
matrix.cpp
iterate.cpp 
vcfiterate.cpp 
netdb.cpp 
svar.cpp
)

target_link_libraries (plinkseq protobuf)
target_link_libraries (plinkseq z)
target_link_libraries (plinkseq sqlite3)
