# TODO: should this be a shared library or a convenience library?
# I tried to make this a "convenience" library with the noinst_ prefix, but it didn't work
# TODO: set up a pkginclude

lib_LTLIBRARIES = libplinkseq.la

libplinkseq_la_SOURCES = \
gstore.cpp \
globals.cpp \
variant.cpp \
svar.cpp \
genotype.cpp \
meta.cpp \
regions.cpp \
filemap.cpp \
vcf.cpp \
bcf.cpp \
zfstream.cpp \
sqlwrap.cpp \
helper.cpp \
options.cpp \
locdb.cpp \
vardb.cpp \
segments.cpp \
varfunc.cpp \
variant.pb.cpp \
refdb.cpp \
seqdb.cpp \
annot.cpp \
inddb.cpp \
mask.cpp \
reffuncs.cpp \
vgroup.cpp \
allele.cpp \
individual.cpp \
indmap.cpp \
phmap.cpp \
permute.cpp \
crandom.cpp \
defs.cpp \
em.cpp \
bed.cpp \
varmeta.cpp \
pp.cpp \
pp.pb.cpp \
eval.cpp \
token.cpp \
statistics.cpp \
dcdflib.cpp \
bgzf.cpp \
fisher.cpp \
glm.cpp \
matrix.cpp \
iterate.cpp \
vcfiterate.cpp \
netdb.cpp \
sqlite3.c

ACLOCAL_AMFLAGS = -I m4

